# t-health

airflow_dags/: .gitignore  Dockerfile  README.md  airflow.cfg  docker-compose.yaml  mwaa-cli.sh  pyproject.toml  requirements.txt
airflow_dags/.aws/cf/: install-mwaa-private.yaml  install-mwaa-public-permissions.yaml  install-mwaa-public.yaml  linux-bastion.yaml  mwaa-vpc.yaml
airflow_dags/.github/workflows/: main.yml
airflow_dags/config/: log_config.py
airflow_dags/dags/: clean_db.py
airflow_dags/dags/cms_gpci_data_dag/: README.md  __init__.py  extract.py  load.py  setup.py  transform.py
airflow_dags/dags/cms_pt_ot_slp_data_dag/: README.md  __init__.py  extract.py  load.py  setup.py  transform.py
airflow_dags/dags/common/: enums.py  parsers.py
airflow_dags/dags/common/aws/: cleanup.py  s3.py
airflow_dags/dags/dh_data_dag/: README.md  __init__.py  load.py  operators.py
airflow_dags/dags/nppes_data_dag/: README.md  __init__.py  cleanup.py  extract.py  load.py  notify.py  setup.py
airflow_dags/dags/opps_addendum_a_data_dag/: README.md  __init__.py  load.py  setup.py  transform.py
airflow_dags/dags/opps_addendum_b_data_dag/: README.md  __init__.py  load.py  setup.py  transform.py
airflow_dags/dags/pfs_rvu_data_dag/: README.md  __init__.py  extract.py  load.py  setup.py  transform.py
airflow_dags/dags/taxonomy_code_data_dag/: README.md  __init__.py  extract.py  load.py  setup.py  transform.py
airflow_dags/dags/wage_index_data_dag/: README.md  __init__.py  cleanup.py  extract.py  load.py  notify.py  setup.py  transform.py
(+44 files in other folders)
